# veil

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROJECT_PLAN.md  README.md  SECURITY.md
benches/: crypto_bench.rs
crates/veil-cli/: Cargo.toml
crates/veil-cli/src/: main.rs
crates/veil-client/: Cargo.toml
crates/veil-client/src/: config.rs  lib.rs  proxy.rs
crates/veil-core/: Cargo.toml
crates/veil-core/src/: cipher.rs  envelope.rs  error.rs  kdf.rs  keys.rs  lib.rs  session.rs
crates/veil-core/tests/: integration.rs  security.rs
crates/veil-server/: Cargo.toml
crates/veil-server/src/: config.rs  handler.rs  lib.rs  metrics.rs  server.rs
docker/: Dockerfile.client  Dockerfile.server  docker-compose.yml  server.toml.example
examples/openai-sdk-example/: README.md
examples/python-client/: README.md  veil_client.py
